unpackaged/main/default/objects/Deals_Funded__c/Deals_Funded__c.object-meta.xml
<CustomObject>
    <description>Deals Funded</description>
    <label>Deals Funded</label>
    <nameField>
        <label>Deals Funded Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals Funded</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>