unpackaged/main/default/objects/Deals_Funded__c/fields/CC_Processor__c.field-meta.xml
<CustomField>
    <fullName>CC_Processor__c</fullName>
    <label>CC Processor</label>
    <length>250</length>
    <type>Text</type>
</CustomField>