unpackaged/main/default/objects/Deals_Funded__c/fields/Closing_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closing_Cost_Amount__c</fullName>
    <label>Closing Cost Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>