unpackaged/main/default/objects/Deals_Funded__c/fields/Closing_cost_Split__c.field-meta.xml
<CustomField>
    <fullName>Closing_cost_Split__c</fullName>
    <label>Closing Cost Split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>