unpackaged/main/default/objects/Deals_Funded__c/fields/Commission_EMC__c.field-meta.xml
<CustomField>
    <fullName>Commission_EMC__c</fullName>
    <label>Commission EMC%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>