unpackaged/main/default/objects/Deals_Funded__c/fields/Commission_PPF__c.field-meta.xml
<CustomField>
    <fullName>Commission_PPF__c</fullName>
    <label>Commission PPF%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>