unpackaged/main/default/objects/Deals_Funded__c/fields/Commission_upfront__c.field-meta.xml
<CustomField>
    <fullName>Commission_upfront__c</fullName>
    <label>Commission upfront</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>