unpackaged/main/default/objects/Deals_Funded__c/fields/Daily_Payment__c.field-meta.xml
<CustomField>
    <fullName>Daily_Payment__c</fullName>
    <label>Daily Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>