unpackaged/main/default/objects/Deals_Funded__c/fields/Date_Funded__c.field-meta.xml
<CustomField>
    <fullName>Date_Funded__c</fullName>
    <label>Date Funded</label>
    <type>Date</type>
</CustomField>