unpackaged/main/default/objects/Deals_Funded__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>