unpackaged/main/default/objects/Deals_Funded__c/fields/Expected_Return__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return__c</fullName>
    <label>Expected Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>