unpackaged/main/default/objects/Deals_Funded__c/fields/Funded_Payback__c.field-meta.xml
<CustomField>
    <fullName>Funded_Payback__c</fullName>
    <label>Funded or Payback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Payback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>