unpackaged/main/default/objects/Deals_Funded__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <label>MID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>