unpackaged/main/default/objects/Deals_Funded__c/fields/Net_Commission_Gain__c.field-meta.xml
<CustomField>
    <fullName>Net_Commission_Gain__c</fullName>
    <label>Net Commission Gain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>