unpackaged/main/default/objects/Deals_Funded__c/fields/Net_Gross__c.field-meta.xml
<CustomField>
    <fullName>Net_Gross__c</fullName>
    <label>Net Gross</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>