unpackaged/main/default/objects/Deals_Funded__c/fields/New_Deal__c.field-meta.xml
<CustomField>
    <fullName>New_Deal__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New deal</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>