unpackaged/main/default/objects/Deals_Funded__c/fields/Payback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payback_Amount__c</fullName>
    <label>Payback Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>