unpackaged/main/default/objects/Deals_Funded__c/fields/Payment_Status_EMC__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_EMC__c</fullName>
    <label>Payment Status EMC</label>
    <length>250</length>
    <type>Text</type>
</CustomField>