unpackaged/main/default/objects/Deals_Funded__c/fields/Payment_Status_PPF__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_PPF__c</fullName>
    <label>Payment Status PPF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Waiting on Bank</fullName>
            </value>
            <value>
                <fullName>Waiting on PPF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>