unpackaged/main/default/objects/Deals_Funded__c/fields/Reciept__c.field-meta.xml
<CustomField>
    <fullName>Reciept__c</fullName>
    <label>Reciept</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>