unpackaged/main/default/objects/Deals_Funded__c/fields/Syndicated__c.field-meta.xml
<CustomField>
    <fullName>Syndicated__c</fullName>
    <label>Syndicated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>