unpackaged/main/default/objects/Deals_Funded__c/fields/Syndicated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Syndicated_Amount__c</fullName>
    <label>Syndicated Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>