unpackaged/main/default/objects/Deals_Funded__c/fields/Total_colected_on_Ongoing_Residuals__c.field-meta.xml
<CustomField>
    <fullName>Total_colected_on_Ongoing_Residuals__c</fullName>
    <label>Total colected  on Ongoing Residuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>