unpackaged/main/default/objects/Deals_Funded__c/fields/Upfront_Commission_Status__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Commission_Status__c</fullName>
    <label>Upfront Commission Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>